--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auction",
+  "name": "vue-project",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -12,11 +12,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.2",
+    "element-plus": "^2.13.0",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.3",
+    "sass": "^1.79.3",
+    "unplugin-auto-import": "^20.3.0",
+    "unplugin-element-plus": "^0.10.0",
+    "unplugin-vue-components": "^30.0.0",
     "vite": "^7.3.0",
     "vite-plugin-vue-devtools": "^8.0.5"
   }
