--- a/Backend/src/main/resources/application.yml
+++ b/Backend/src/main/resources/application.yml
@@ -13,3 +13,12 @@ spring:
     password: 123456
     #\u6570\u636E\u5E93\u9A71\u52A8
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+mybatis:
+  ##映射xml
+  mapper-locations: classpath:mapper/*.xml
+  configuration:
+    #配置文件
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    #数据库中的表名与实体类名的映射关系(下划线命名法转驼峰命名法)
+    map-underscore-to-camel-case: true
