--- a/Backend/src/main/resources/application.yml
+++ b/Backend/src/main/resources/application.yml
@@ -6,8 +6,7 @@ server:
 spring:
   datasource:
     #\u6570\u636E\u5E93\u8FDE\u63A5\u5730\u5740
-    url: jdbc:mysql://localhost:3306/auction?useUnicode=true&characterEncoding=utf-8&useSSL=false
-    #\u6570\u636E\u5E93\u7528\u6237\u540D
+    url: jdbc:mysql://localhost:3306/auction?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf-8
     username: root
     #\u6570\u636E\u5E93\u5BC6\u7801
     password: 123456
